CHANGES for Netcdf-Java library
Version @VERSION.MINOR@
Build Date = @BUILDTIME@

Changes in version 4.2:
 6: (xxxx-xx-xx)
  FmrcInvLite.GridInventory now checks for intervals correctly
  CoordinateAxis1D.makeBounds() - check for ordering, dont accept equality
 5: (2010-09-17)
  ArrayStructureBB.setOffsets() also calls setStructureSize(), does all nested members.
  BUFR MessageUncompressedDataReader: bug in deeply nested structures
  FeatureCollectionConfig.ProtoChoice : add Run, with param = run hour
  Calendar.HOUR should be Calendar.HOUR_OF_DAY everywhere
  GribIOSP: raf was not setting endianess
  Fmrc : integrate time intervals
  M3IO : add projection types 6,7,8,9,10 (from plessel.todd@epa.gov)
  ToolsUI: WMO grib code tables UI
  NetcdfDataset.wrap() creates real wrapper when enhancement needed - to not munge cached file
  GridDataset always uses default enhance mode.
  CFPoint: bug when feature id was a char type
  dual pole radar changes
  Remove Indexing cruft
  IOSP: Replace Index with IndexLong to deal with very large files
  Fix problem with WMS ignoring _FillValue (see JIRA TDS-108). Clean up some NetcdfDataset and GridDataset enhance mode stuff.
  refactor grib, deal with time intervals
  iosp.IndexChunker needs to use a special version of Index that uses longs, since the source can be a file > 2^32
  remove old iosp.Indexer cruft
 4: (2010-07-26)
  FMRCDataset process ncml in ProtoDataset element
  FMRCDataset check if 2D dataset exists, ncml in ProtoDataset
  CoordAxis1D.makeBounds() check for numeric
  GridCoordSys.getRangesFromLatLonRect() uses LatLonPointImpl.lonNormalFrom() for latlon bounding box
  HDF5 bug: group btree entries were the wrong size when offsets = 4 bytes (!)
  Change GRIB projection name "rotated_lat_lon" to "rotated_latlon_grib"
  WRFConventions: stereographic projection use centralLat ("CEN_LAT") when available
  HDF5 bug: group btree entries were the wrong size when offsets = 4 bytes (!)